Creación del Proyecto y conficuración Angular Material

--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
               }
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css"
             ],
             "server": "src/main.server.ts",
@@ -93,5 +94,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "921cd994-5b9c-43f6-8b3d-d0e0f0a6095a"
   }
 }
